update on the carousel

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 .main-container{
-  height: max-content;
-  width: max-content;
-  align-self: center;
-  justify-self: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
   font-size: 30px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
