--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,10 +1,12 @@
 .carousel-container{
-    width: 220px;
-    height: 200px;
+    width: 500px;
+    height: 500px;
     perspective: 1000px;
 }
 
 .carousel{
+    width: 100%;
+    height: 100%;
     transform-style: preserve-3d;
     animation: rotate 20s linear infinite;
 }
@@ -12,8 +14,6 @@
 .carousel > * {
     position: absolute;
     width: 100%;
-    image-rendering: auto;
-    box-sizing: border-box;
 }
 
 @keyframes rotate{
