--- a/src/index.css
+++ b/src/index.css
@@ -13,18 +13,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root{
+  width: 100%;
+}
+
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  align-items: center;
-  justify-content: center;
   width: 100vw;
   height: 100vh;
-}
-
-@media only screen and (max-width: 600px) {
-  body{
-    place-items: start;
-  }
 }
