carousel resolution handling

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   height: 100%;
   width: 100%;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   font-size: 30px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
