--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -10,19 +10,10 @@
     width: 100%;
     height: 100%;
     transform-style: preserve-3d;
-    animation: rotate 20s linear infinite;
+    transition: all ease-in-out 1s;
 }
 
 .carousel > * {
     position: absolute;
     width: 100%;
-}
-
-@keyframes rotate{
-    0%{
-        transform: rotateY(0deg);
-    }
-    100%{
-        transform: rotateY(360deg);
-    }
 }
