--- a/src/components/CarouselCard/CarouselCard.css
+++ b/src/components/CarouselCard/CarouselCard.css
@@ -1,6 +1,6 @@
 .carousel-card-container {
     height: 45vh;
-    background-color: lightblue;
+    background-color: rgb(0, 191, 255);
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -12,13 +12,14 @@
   }
 
   .carousel-card-title{
-    font-size: 1.5em;
+    font-size: 28px;
     text-transform: capitalize;
     width: 75%;
     font-weight: 500;
-    border-bottom: 5px black solid;
+    border-bottom: 3px black solid;
   }
 
   .carousel-card-info{
-    gap: 10px;
+    gap: 20px;
+    width: 100%;
   }
