--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -17,3 +17,9 @@
     position: absolute;
     width: 100%;
 }
+
+@media only screen and (max-width:760px){
+    .carousel-container{
+        width: 75vw;
+    }
+}
