--- a/src/App.css
+++ b/src/App.css
@@ -18,15 +18,25 @@
   animation: image-grow 2s
 }
 
+.main-title{
+  margin-top: 50px;
+}
+
 @media only screen and (max-width: 760px) {
   .main-image{
-    height:9vh;  
+    height:8.5vh;  
     top:0;
+    inset-inline-start: 45%;
   }
 
   .main-container{
     margin-top: 60px;
     font-size: 28px;
+  }
+
+  .main-title{
+    margin-top: unset;
+    font-size: 1rem;
   }
 }
 @keyframes image-grow {
