--- a/src/components/navigation/NavItem.css
+++ b/src/components/navigation/NavItem.css
@@ -1,5 +1,5 @@
 .nav-item-container{
-    background-color: blue;
+    background-image:linear-gradient(rgb(0, 0, 197),rgb(55, 55, 66));
     border-radius: 10px;
     border-end-end-radius: 0px;
     border-start-end-radius: 0px;
