--- a/src/components/CarouselCard/CarouselCard.css
+++ b/src/components/CarouselCard/CarouselCard.css
@@ -1,6 +1,6 @@
 .carousel-card-container {
     height: 45vh;
-    background-color: rgb(0, 191, 255);
+    background-color: rgb(18, 63, 91);
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -9,10 +9,12 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     padding: 20px;
     gap:10px;
+    overflow-y: scroll;
+    scrollbar-width:none;
   }
 
   .carousel-card-title{
-    font-size: 28px;
+    font-size: 1.3rem;
     text-transform: capitalize;
     width: 75%;
     font-weight: 500;
@@ -20,6 +22,9 @@
   }
 
   .carousel-card-info{
-    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
     width: 100%;
+    height: 100%;
   }
