--- a/src/components/subSection/SubSection.css
+++ b/src/components/subSection/SubSection.css
@@ -1,12 +1,42 @@
 .subsection-container{
     border: 1px solid black;
     border-radius: 15px;
+    padding: 5px;
     width: 100%;
-    margin-top: 2px;
-    margin-bottom: 2px;
 }
 .subsection-title{
+    font-size: 1rem;
+    text-transform: capitalize;
+    color: rgb(10, 212, 239);
+
 }
 .subsection-info{
+    display: flex;
+    flex-direction: column;
+    font-size: 0.85rem;
+    margin-inline-start: 0.5rem;
+    gap: 5px;
+}
 
+.dot-container{
+    width: 1rem;
+    height: 1.3rem;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    margin-inline-end: 5px;
+}
+.dot{
+    height:5px;
+    width:5px;
+    border-radius: 50px;
+    background-color: white;
+}
+
+.bullet-point{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    text-transform: capitalize;
 }
